--- a/index.html
+++ b/index.html
@@ -1,22 +1,49 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Button Click Example</title>
-</head>
 <body>
-    <h1>Button Click Test</h1>
-    <button onclick="notifyPython()">Click Me!</button>
-    <script>
-        function notifyPython() {
-        // Pythonの関数を呼び出す
-        window.pywebview.api.button_clicked('Button was clicked!')
-          .then(response => {
-            console.log('Python response:', response);
-          })
-          .catch(error => {
-            console.error('Error:', error);
-          });
+  <script type="importmap">
+    {
+      "imports": {
+        "vue": "https://cdn.jsdelivr.net/npm/vue@3.2/dist/vue.esm-browser.prod.js"
+      }
+    }
+  </script>
+
+  <div id="app">
+    <p v-if="state">Hello, {{ state.name }}!</p>
+    <p v-if="state">{{ state.cnt }}</p>
+    <button @click="inc">inc</button>
+    <button @click="dec">dec</button>
+  </div>
+
+  <script type="module">
+    import { createApp } from 'vue';
+
+    createApp({
+      data() {
+        return {
+          state : null
+        };
+      },
+      mounted() {
+        /* window.pywebview.apiがセットされるのを待つ */
+        const waitForApi = () => {
+          if (window.pywebview && window.pywebview.api) {
+            window.pywebview.api.postMessage({ kind: 'init' }).then((init) => {
+              this.state = init;
+            });
+          } else {
+            setTimeout(waitForApi, 100);
+          }
+        };
+        waitForApi();
+      },
+      methods: {
+        async inc(){
+          this.state = await window.pywebview.api.postMessage({ 'kind' : 'inc' })
+        },
+        async dec(){
+          this.state = await window.pywebview.api.postMessage({ 'kind' : 'dec' })
         }
-    </script>
+      },
+    }).mount('#app');
+  </script>
 </body>
-</html>
